--- a/scss/components/_card.scss
+++ b/scss/components/_card.scss
@@ -2,19 +2,23 @@
     width: 16rem;
     height: 26rem;
     background-color: $white;
-    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
-    transition: 0.3s;
+    box-shadow: 0 5px 20px 0 rgba(0, 0, 0, .1);
     padding: 1rem;
     margin: 1rem auto;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    cursor: pointer;
+    border-radius: 3px;
     &__header {
         &--graphic {
             width: 14rem;
-            height: 12rem;
+            height: 10rem;
         }
     }
     &__body {
         &--title {
-            font-size: 1.5rem;
+            font-size: 1rem;
             padding: .5rem 0;
         }
         &--condensed-title {
@@ -22,10 +26,18 @@
             padding: .5rem 0;
         }
         &--paragraph {
-            text-align: start;
+            height: 8rem;
+            text-align: left;
             font-weight: 700;
-            margin-bottom: 2rem;
-            font-size: 1rem;
+            margin: .5rem 0 1rem;
+            font-size: 1.5rem;
+            line-height: 1.8rem;
+            white-space: normal;
+            text-overflow: ellipsis;
+            display: -webkit-box;
+            -webkit-line-clamp: 4;
+            -webkit-box-orient: vertical;
+            overflow: hidden;
         }
         &--link-to {
             display: flex;
@@ -38,8 +50,4 @@
             }
         }
     }
-}
-
-.a-card:hover {
-    box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
 }
